feat: Add etymology generation for oral cards
- Add generate_etymology_explanation() for single and multi-char words
- Update write_oral_card_md to include etymology field
- Add helper scripts for manifest management
- Regenerate class cards with character breakdowns + etymology

Fixes: dujia (度假), ruguo (如果), maibuqi (买不起)

--- a/output/chinese/class/12-22-25/book/output/1.着.md
+++ b/output/chinese/class/12-22-25/book/output/1.着.md
@@ -2,26 +2,27 @@
 ---
 - **pinyin:** zhe
 - **definition:** indicating the continuous aspect
+- **etymology:** Phono-semantic: traditionally built with the 'grass' radical (signaling something manifest/standing out) plus a phonetic element; the simplified form features an 'eye,' evoking something perceptible. This notion of being attached/visible underlies its role marking a state currently in effect (continuous aspect).
 - **examples:**
-  - 墙上还挂着一幅画(牆上還掛著一幅畫)。
-    - qiáng shàng hái guà zhe yī fú huà
-    - There's still a painting hanging on the wall.
-  - 说着(說著)。
-    - shuō zhe
-    - saying; while speaking
-  - 笑着(笑著)。
-    - xiào zhe
-    - smiling; while laughing
-  - 等着(等著)。
-    - děng zhe
-    - waiting
-  - 开着车(開著車)。
-    - kāi zhe chē
-    - driving; with the car on
-  - 带着花儿(帶著花兒)。
-    - dài zhe huār
-    - carrying flowers; with flowers
-  - 穿着旗袍(穿著旗袍)。
-    - chuān zhe qípáo
-    - wearing a qipao
+  - 灯还亮着(燈還亮著)。
+    - dēng hái liàng zhe
+    - The light is still on.
+  - 他小声说着(他小聲說著)。
+    - tā xiǎo shēng shuō zhe
+    - He kept speaking in a low voice.
+  - 她笑着向我招手(她笑著向我招手)。
+    - tā xiào zhe xiàng wǒ zhāo shǒu
+    - She waved to me with a smile.
+  - 我在门口等着你(我在門口等著你)。
+    - wǒ zài ménkǒu děng zhe nǐ
+    - I’m waiting for you at the door.
+  - 他开着车打电话很危险(他開著車打電話很危險)。
+    - tā kāi zhe chē dǎ diànhuà hěn wēixiǎn
+    - It’s dangerous to talk on the phone while driving.
+  - 她带着花儿来了(她帶著花兒來了)。
+    - tā dài zhe huār lái le
+    - She came carrying flowers.
+  - 她穿着旗袍参加晚会(她穿著旗袍參加晚會)。
+    - tā chuān zhe qípáo cānjiā wǎnhuì
+    - She attended the evening party wearing a qipao.
 %%%
