--- a/output/chinese/class/12-22-25/book/output/11.胳膊.md
+++ b/output/chinese/class/12-22-25/book/output/11.胳膊.md
@@ -2,14 +2,22 @@
 ---
 - **pinyin:** gēbo
 - **definition:** arm
+- **characters:**
+  - 胳
+    - gē
+    - arm, upper limb (in colloquial compounds)
+  - 膊
+    - bó
+    - upper arm, shoulder area; arm (colloquial, in 胳膊)
+- **etymology:** Two flesh-radical body-part morphemes combine, with 膊 (upper arm) as the head and 胳 as a colloquial limb tag, forming a pleonastic binome that emphatically denotes the arm from the shoulder down.
 - **examples:**
-  - 他抓住了我的胳膊(他抓住了我的胳膊)。
-    - tā zhuāzhù le wǒ de gēbo
-    - He grabbed my arm.
+  - 他抬起胳膊(他抬起胳膊)，向我挥手(向我揮手)。
+    - tā tái qǐ gē bo xiàng wǒ huī shǒu
+    - He raised his arm and waved to me.
   - 胳膊被撞伤(胳膊被撞傷)。
-    - gēbo bèi zhuàngshāng
-    - My arm was injured in a collision.
+    - gē bo bèi zhuàng shāng
+    - The arm was injured in a collision.
   - 胳膊疼(胳膊疼)。
-    - gēbo téng
-    - My arm hurts
+    - gē bo téng
+    - The arm hurts.
 %%%
