--- a/output/chinese/class/12-22-25/book/output/12.腿.md
+++ b/output/chinese/class/12-22-25/book/output/12.腿.md
@@ -2,14 +2,15 @@
 ---
 - **pinyin:** tuǐ
 - **definition:** leg
+- **etymology:** Phono-semantic: the left “flesh” radical ⺼/月 marks a body part, while 退 on the right provides the sound and evokes stepping/retreating, fitting the idea of the limb used to move.
 - **examples:**
-  - 我的腿突然抽筋了(我的腿突然抽筋了)。
-    - wǒ de tuǐ tūrán chōujīn le
-    - My leg suddenly cramped up
+  - 她的腿很长(她的腿很長)。
+    - tā de tuǐ hěn cháng
+    - Her legs are long.
   - 撞伤腿(撞傷腿)。
     - zhuàng shāng tuǐ
-    - injure one's leg
+    - To bump and injure one’s leg.
   - 腿有点儿疼(腿有點兒疼)。
     - tuǐ yǒu diǎnr téng
-    - My leg hurts a little
+    - My leg hurts a little.
 %%%
