--- a/output/chinese/class/12-22-25/book/output/13.骑.md
+++ b/output/chinese/class/12-22-25/book/output/13.骑.md
@@ -2,14 +2,15 @@
 ---
 - **pinyin:** qí
 - **definition:** to ride
+- **etymology:** Phono-semantic: the horse radical signals an action involving a horse, while 奇 provides the sound. Together it denotes mounting/straddling a horse, hence “to ride.”
 - **examples:**
-  - 他每天骑自行车上学(他每天騎自行車上學)。
-    - tā měitiān qí zìxíngchē shàngxué
-    - He rides a bike to school every day.
-  - 骑马(騎馬)。
-    - qí mǎ
-    - to ride a horse
-  - 骑车(騎車)。
-    - qí chē
-    - to ride a bike
+  - 他每天骑自行车上班(他每天騎自行車上班)。
+    - tā měitiān qí zìxíngchē shàngbān
+    - He rides a bicycle to work every day.
+  - 她会骑马(她會騎馬)。
+    - tā huì qí mǎ
+    - She can ride a horse.
+  - 我们周末去公园骑车(我們週末去公園騎車)。
+    - wǒmen zhōumò qù gōngyuán qí chē
+    - We go cycling in the park on weekends.
 %%%
