--- a/output/chinese/class/12-22-25/book/output/14.自行车.md
+++ b/output/chinese/class/12-22-25/book/output/14.自行车.md
@@ -2,17 +2,28 @@
 ---
 - **pinyin:** zìxíngchē
 - **definition:** bicycle
+- **characters:**
+  - 自
+    - zì
+    - self, oneself; from, since; naturally, spontaneously
+  - 行
+    - xíng/háng
+    - to walk, to go; to be OK, permissible; row, line; profession, trade
+  - 车(車)
+    - chē
+    - vehicle, car; cart, wagon; chariot; to turn on a lathe
+- **etymology:** Literally a “self-moving vehicle”: a conveyance that goes by one’s own power rather than animals or engines, hence the human-powered bicycle.
 - **examples:**
-  - 我每天骑自行车上学(我每天騎自行車上學)。
-    - wǒ měitiān qí zìxíngchē shàngxué
-    - I ride a bicycle to school every day.
-  - 骑自行车(騎自行車)。
-    - qí zìxíngchē
-    - to ride a bicycle
-  - 买自行车(買自行車)。
-    - mǎi zìxíngchē
-    - to buy a bicycle
-  - 骑着自行车回学院(騎著自行車回學院)。
-    - qí zhe zìxíngchē huí xuéyuàn
-    - riding a bicycle back to the college.
+  - 他把自行车停在门口(他把自行車停在門口)。
+    - tā bǎ zì xíng chē tíng zài mén kǒu
+    - He parked the bicycle at the entrance.
+  - 我每天骑自行车上班(我每天騎自行車上班)。
+    - wǒ měi tiān qí zì xíng chē shàng bān
+    - I ride a bicycle to work every day.
+  - 她想买自行车(她想買自行車)。
+    - tā xiǎng mǎi zì xíng chē
+    - She wants to buy a bicycle.
+  - 他骑着自行车回学院(他騎著自行車回學院)。
+    - tā qí zhe zì xíng chē huí xué yuàn
+    - He rides back to the college on his bicycle.
 %%%
