--- a/output/chinese/class/12-22-25/book/output/15.笑.md
+++ b/output/chinese/class/12-22-25/book/output/15.笑.md
@@ -2,26 +2,27 @@
 ---
 - **pinyin:** xiào
 - **definition:** to laugh; to smile
+- **etymology:** Phono-semantic: top 竹 ‘bamboo’ hints at light, crisp sounds, while lower 夭 (a bending sprout/person) supplies the sound value and a sense of sprightly liveliness—together evoking laughing and smiling.
 - **examples:**
-  - 大家突然笑了起来(大家突然笑了起來)。
-    - dàjiā tūrán xiào le qǐlái
-    - Everyone suddenly burst out laughing
-  - 她对我甜甜地一笑(她對我甜甜地一笑)。
-    - tā duì wǒ tiántián de yí xiào
-    - She gave me a sweet smile.
-  - 笑着(笑著)。
-    - xiào zhe
-    - smiling; while laughing
-  - 笑着说(笑著說)。
-    - xiào zhe shuō
-    - to say with a smile
-  - 别笑了(別笑了)。
-    - bié xiào le
-    - stop laughing
-  - 喜欢笑(喜歡笑)。
-    - xǐhuan xiào
-    - to like to laugh
-  - 大笑(大笑)。
-    - dà xiào
-    - to laugh out loud
+  - 听到那个笑话(聽到那個笑話)，他笑得停不下来(他笑得停不下來)。
+    - tīng dào nàge xiàohuà, tā xiào de tíng bù xià lái
+    - Hearing that joke, he laughed and couldn't stop.
+  - 她对我笑了笑(她對我笑了笑)，好像一切都没事(好像一切都沒事)。
+    - tā duì wǒ xiào le xiào, hǎoxiàng yíqiè dōu méi shì
+    - She smiled at me, as if everything was fine.
+  - 他笑着点了点头(他笑著點了點頭)。
+    - tā xiào zhe diǎn le diǎn tóu
+    - He smiled and nodded.
+  - 他笑着说(他笑著說)，没事(沒事)。
+    - tā xiào zhe shuō, méi shì
+    - He said with a smile, it's fine.
+  - 别笑了(別笑了)，我们要开始了(我們要開始了)。
+    - bié xiào le, wǒmen yào kāishǐ le
+    - Stop laughing, we're about to start.
+  - 她很喜欢笑(她很喜歡笑)，气氛因此轻松了许多(氣氛因此輕鬆了許多)。
+    - tā hěn xǐhuan xiào, qìfēn yīncǐ qīngsōng le xǔduō
+    - She likes to smile, so the atmosphere became much more relaxed.
+  - 听到他的段子(聽到他的段子)，观众大笑起来(觀眾大笑起來)。
+    - tīng dào tā de duànzi, guānzhòng dàxiào qǐlái
+    - Hearing his routine, the audience burst into laughter.
 %%%
