--- a/output/chinese/class/12-22-25/book/output/16.注意.md
+++ b/output/chinese/class/12-22-25/book/output/16.注意.md
@@ -2,20 +2,28 @@
 ---
 - **pinyin:** zhùyì
 - **definition:** to pay attention to
+- **characters:**
+  - 注(注/註)
+    - zhù
+    - pour, pour into; focus, concentrate; annotate, make notes; register
+  - 意
+    - yì
+    - meaning, sense; intention, purpose; idea, thought
+- **etymology:** Combines the notion of pouring/focusing with mind/intent, evoking the act of channeling one’s intention toward something—hence paying attention.
 - **examples:**
-  - 开车时要注意安全(開車時要注意安全)。
-    - kāichē shí yào zhùyì ānquán
-    - Pay attention to safety when driving.
+  - 开车时要注意安全(開車時要注意安全)，保持专注(保持專注)。
+    - kāi chē shí yào zhùyì ānquán, bǎochí zhuānzhù
+    - When driving, pay attention to safety and stay focused.
   - 没有注意(沒有注意)。
     - méiyǒu zhùyì
-    - didn't pay attention
+    - Didn't pay attention.
   - 注意语法(注意語法)。
     - zhùyì yǔfǎ
-    - pay attention to the grammar
+    - Pay attention to grammar.
   - 注意听(注意聽)。
     - zhùyì tīng
-    - listen carefully
+    - Listen carefully.
   - 注意看(注意看)。
     - zhùyì kàn
-    - look carefully
+    - Watch closely.
 %%%
