--- a/output/chinese/class/12-22-25/book/output/17.停.md
+++ b/output/chinese/class/12-22-25/book/output/17.停.md
@@ -2,20 +2,21 @@
 ---
 - **pinyin:** tíng
 - **definition:** to stop; to park
+- **etymology:** Composed of the 'person' radical (亻) plus 'pavilion' (亭), with 亭 providing the sound; the image of a person by a pavilion evokes stopping to rest, yielding the meaning 'to stop; to park.'
 - **examples:**
-  - 请在这儿停一下吧(請在這兒停一下吧)。
-    - qǐng zài zhèr tíng yíxià ba
-    - Please stop here for a moment.
-  - 这条路边禁止停车(這條路邊禁止停車)。
-    - zhè tiáo lùbiān jìnzhǐ tíngchē
-    - Parking is prohibited along this road.
+  - 看到红灯(看到紅燈)，就停下(就停下)。
+    - kàn dào hóng dēng jiù tíng xià
+    - When you see a red light, stop.
+  - 我把车停在车库里(我把車停在車庫裡)。
+    - wǒ bǎ chē tíng zài chē kù lǐ
+    - I parked the car in the garage.
   - 停在路旁边(停在路旁邊)。
-    - tíng zài lù pángbiān
-    - stop by the roadside
+    - tíng zài lù páng biān
+    - Stop by the roadside.
   - 停车(停車)。
-    - tíngchē
-    - to park
+    - tíng chē
+    - To park; parking.
   - 停课(停課)。
-    - tíngkè
-    - to suspend classes
+    - tíng kè
+    - To suspend classes.
 %%%
