--- a/output/chinese/class/12-22-25/book/output/18.医药费.md
+++ b/output/chinese/class/12-22-25/book/output/18.医药费.md
@@ -2,11 +2,22 @@
 ---
 - **pinyin:** yīyàofèi
 - **definition:** medical expenses
+- **characters:**
+  - 医(醫)
+    - yī
+    - medicine, medical science; doctor, physician; to treat, to heal
+  - 药(藥)
+    - yào
+    - medicine, drug; to apply medicine, to medicate
+  - 费(費)
+    - fèi
+    - expense, cost, fee; to spend, to expend; to waste
+- **etymology:** Joins “medical care and medicines” with the morpheme for “expense,” specifying the monetary outlay for treatment and drugs.
 - **examples:**
-  - 医药费可以报销吗(醫藥費可以報銷嗎)。
-    - yī yào fèi kě yǐ bào xiāo ma
-    - Can medical expenses be reimbursed?
+  - 保险不能报销所有的医药费(保險不能報銷所有的醫藥費)，我们自己还要付一部分(我們自己還要付一部分)。
+    - bǎoxiǎn bù néng bàoxiāo suǒyǒu de yīyàofèi wǒmen zìjǐ hái yào fù yí bùfèn
+    - Insurance can’t reimburse all the medical expenses; we still have to pay a portion.
   - 交医药费(交醫藥費)。
-    - jiāo yī yào fèi
-    - to pay medical expenses
+    - jiāo yīyàofèi
+    - Pay medical expenses.
 %%%
