--- a/output/chinese/class/12-22-25/book/output/19.以为.md
+++ b/output/chinese/class/12-22-25/book/output/19.以为.md
@@ -2,17 +2,25 @@
 ---
 - **pinyin:** yǐwéi
 - **definition:** to think (with more subjectivity)
+- **characters:**
+  - 以
+    - yǐ
+    - to use, take (as); with, by means of; according to, on the basis of; in order to, so as to
+  - 为(為)
+    - wéi, wèi
+    - to do, act; to be, become, serve as; for, for the sake of; because of, due to
+- **etymology:** Literally “take it to be,” combining the sense of taking/using (以) with being/doing (为) to mean “regard/assume X as Y,” hence a subjective, often mistaken, belief.
 - **examples:**
-  - 我以为你已经走了(我以為你已經走了)。
-    - wǒ yǐwéi nǐ yǐjīng zǒu le
-    - I thought you had already left.
-  - 我以为(我以為)。
-    - wǒ yǐwéi
-    - I thought; I assumed.
-  - 别以为(別以為)。
-    - bié yǐwéi
-    - Don't assume
-  - 都以为(都以為)。
-    - dōu yǐwéi
-    - Everyone thought
+  - 我以为他已经走了(我以為他已經走了)，结果他还在(結果他還在)。
+    - wǒ yǐwéi tā yǐjīng zǒu le, jiéguǒ tā hái zài
+    - I thought he had already left, but he was still there.
+  - 我以为你不会来(我以為你不會來)。
+    - wǒ yǐwéi nǐ bú huì lái
+    - I thought you wouldn’t come.
+  - 别以为你什么都懂(別以為你什麼都懂)，你还需要学习(你還需要學習)。
+    - bié yǐwéi nǐ shénme dōu dǒng, nǐ hái xūyào xuéxí
+    - Don’t think you know everything; you still need to learn.
+  - 大家都以为这件事很简单(大家都以為這件事很簡單)，结果做起来很难(結果做起來很難)。
+    - dàjiā dōu yǐwéi zhè jiàn shì hěn jiǎndān, jiéguǒ zuò qǐ lái hěn nán
+    - Everyone thought this was simple, but it turned out hard to do.
 %%%
