--- a/output/chinese/class/12-22-25/book/output/2.送.md
+++ b/output/chinese/class/12-22-25/book/output/2.送.md
@@ -2,26 +2,27 @@
 ---
 - **pinyin:** sòng
 - **definition:** to take someone somewhere; to see someone off
+- **etymology:** Combines the walking radical 辶 with phonetic 关 ‘gate/pass’: the motion element signals going, and the gate imagery evokes accompanying someone to or beyond the gate—hence to send or see off.
 - **examples:**
-  - 我开车送你回家吧(我開車送你回家吧)。
-    - wǒ kāichē sòng nǐ huíjiā ba
-    - Let me drive you home
-  - 我们去机场送行吧(我們去機場送行吧)。
-    - wǒmen qù jīchǎng sòngxíng ba
-    - Let's go to the airport to see them off.
-  - 送我回家(送我回家)。
-    - sòng wǒ huíjiā
-    - take me home
-  - 开着车送(開著車送)。
-    - kāi zhe chē sòng
-    - to take someone by car
-  - 我们到医院(我們到醫院)。
-    - wǒmen dào yīyuàn
-    - we go to the hospital.
-  - 送我们门外(边)(送我們門外(邊))。
-    - sòng wǒmen ménwài(biān)
-    - see us to the door/outside
-  - 送到火车站(送到火車站)。
-    - sòng dào huǒchēzhàn
-    - take to the train station
+  - 我送你回家(我送你回家)。
+    - wǒ sòng nǐ huí jiā
+    - I'll take you home.
+  - 我们去机场送他(我們去機場送他)。
+    - wǒmen qù jīchǎng sòng tā
+    - We'll go to the airport to see him off.
+  - 他送我回家(他送我回家)。
+    - tā sòng wǒ huí jiā
+    - He took me home.
+  - 他开着车送我去学校(他開著車送我去學校)。
+    - tā kāi zhe chē sòng wǒ qù xuéxiào
+    - He drove me to school.
+  - 他送我们到医院(他送我們到醫院)。
+    - tā sòng wǒmen dào yīyuàn
+    - He took us to the hospital.
+  - 他把我们送到门外边(他把我們送到門外邊)。
+    - tā bǎ wǒmen sòng dào mén wàibiān
+    - He saw us to the door.
+  - 我把她送到火车站(我把她送到火車站)。
+    - wǒ bǎ tā sòng dào huǒchēzhàn
+    - I took her to the train station.
 %%%
