--- a/output/chinese/class/12-22-25/book/output/20.如果.md
+++ b/output/chinese/class/12-22-25/book/output/20.如果.md
@@ -2,8 +2,16 @@
 ---
 - **pinyin:** rúguǒ
 - **definition:** if
+- **characters:**
+  - 如
+    - rú
+    - as, like; such as; in accordance with, according to; if
+  - 果
+    - guǒ
+    - fruit; result, outcome; to bear fruit, to yield results; indeed, really
+- **etymology:** Combines the sense of 'as/if' (如) with 'result/indeed' (果) to frame a hypothetical oriented toward its consequence—'if it is thus, then (this follows)'. In classical nuance, 果 adds an 'indeed/in fact' force that underscores the conditional.
 - **examples:**
-  - 如果下雨我们就不去(如果下雨我們就不去)。
-    - rúguǒ xià yǔ wǒmen jiù bù qù
-    - If it rains, we won't go.
+  - 如果你有时间(如果你有時間)，我们就一起吃饭(我們就一起吃飯)。
+    - rúguǒ nǐ yǒu shíjiān, wǒmen jiù yìqǐ chīfàn
+    - If you have time, we'll eat together.
 %%%
