--- a/output/chinese/class/12-22-25/book/output/3.被.md
+++ b/output/chinese/class/12-22-25/book/output/3.被.md
@@ -2,20 +2,21 @@
 ---
 - **pinyin:** bèi
 - **definition:** by (used to indicate the passive voice)
+- **etymology:** Phono-semantic compound: left 'clothing' radical (衤) signals cloth/covering, while right 'skin' (皮) supplies the sound and image. The notion of being covered/acted upon extended to 'being subjected to,' which became the passive marker 'by'.
 - **examples:**
-  - 他被老师批评了一顿(他被老師批評了一頓)。
-    - tā bèi lǎoshī pīpíng le yí dùn
-    - He was criticized by the teacher.
-  - 被问(被問)。
-    - bèi wèn
-    - be asked
-  - 被骂(被罵)。
-    - bèi mà
-    - be scolded
-  - 被访问(被訪問)。
-    - bèi fǎngwèn
-    - be visited; be accessed
-  - 被覆盖(被覆蓋)。
-    - bèi fùgài
-    - be covered; be overwritten
+  - 他昨天被老师严厉批评了(他昨天被老師嚴厲批評了)。
+    - tā zuó tiān bèi lǎo shī yán lì pī píng le
+    - He was severely criticized by the teacher yesterday.
+  - 我在会上被问了很多问题(我在會上被問了很多問題)。
+    - wǒ zài huì shàng bèi wèn le hěn duō wèn tí
+    - I was asked many questions at the meeting.
+  - 他因为迟到被老板骂了(他因為遲到被老闆罵了)。
+    - tā yīn wèi chí dào bèi lǎo bǎn mà le
+    - He was scolded by the boss for being late.
+  - 这个网站昨天被访问了一百万次(這個網站昨天被訪問了一百萬次)。
+    - zhè ge wǎng zhàn zuó tiān bèi fǎng wèn le yì bǎi wàn cì
+    - This website was visited one million times yesterday.
+  - 小镇被厚厚的积雪覆盖了(小鎮被厚厚的積雪覆蓋了)。
+    - xiǎo zhèn bèi hòu hòu de jī xuě fù gài le
+    - The small town was covered by thick snow.
 %%%
