--- a/output/chinese/class/12-22-25/book/output/4.撞.md
+++ b/output/chinese/class/12-22-25/book/output/4.撞.md
@@ -2,20 +2,21 @@
 ---
 - **pinyin:** zhuàng
 - **definition:** to knock; to collide
+- **etymology:** Left “hand” radical marks a striking/doing action; right “heavy” provides the sound (zhòng → zhuàng) and suggests weight/force, evoking a hand-driven heavy impact—hence to knock or collide.
 - **examples:**
-  - 他不小心撞到门上(他不小心撞到門上)。
-    - tā bù xiǎoxīn zhuàng dào mén shàng
-    - He accidentally bumped into the door.
-  - 两车在路口相撞了(兩車在路口相撞了)。
-    - liǎng chē zài lùkǒu xiāngzhuàng le
+  - 他不小心把花瓶撞倒了(他不小心把花瓶撞倒了)。
+    - tā bù xiǎo xīn bǎ huā píng zhuàng dǎo le
+    - He accidentally knocked the vase over.
+  - 两辆车在十字路口相撞(兩輛車在十字路口相撞)。
+    - liǎng liàng chē zài shí zì lù kǒu xiāng zhuàng
     - Two cars collided at the intersection.
-  - 被车撞(被車撞)。
-    - bèi chē zhuàng
-    - be hit by a car
-  - 撞车(撞車)。
-    - zhuàngchē
-    - car crash; to crash cars
-  - 撞人(撞人)。
-    - zhuàng rén
-    - to hit someone
+  - 我昨天被车撞了(我昨天被車撞了)。
+    - wǒ zuó tiān bèi chē zhuàng le
+    - I was hit by a car yesterday.
+  - 他因为酒驾撞车了(他因為酒駕撞車了)。
+    - tā yīn wèi jiǔ jià zhuàng chē le
+    - He crashed the car because of drunk driving.
+  - 别乱骑车(別亂騎車)，容易撞人(容易撞人)。
+    - bié luàn qí chē, róng yì zhuàng rén
+    - Don't ride recklessly; it's easy to hit people.
 %%%
