--- a/output/chinese/class/12-22-25/book/output/5.伤.md
+++ b/output/chinese/class/12-22-25/book/output/5.伤.md
@@ -2,17 +2,18 @@
 ---
 - **pinyin:** shāng
 - **definition:** to hurt; to wound
+- **etymology:** A phono-semantic compound with the person radical indicating someone is affected, plus a phonetic element from the 昜/扬 family giving the shāng sound; the juxtaposition reads as “a person with an opened/raised gash,” hence ‘to wound.’
 - **examples:**
-  - 他不小心伤了自己(他不小心傷了自己)。
-    - tā bù xiǎoxīn shāng le zìjǐ
-    - He accidentally hurt himself.
-  - 他被箭伤得很重了(他被箭傷得很重了)。
-    - tā bèi jiàn shāng de hěn zhòng le
-    - He was badly wounded by an arrow.
-  - 被撞伤(被撞傷)。
-    - bèi zhuàng shāng
-    - be injured in a crash
-  - 撞伤人(撞傷人)。
-    - zhuàng shāng rén
-    - to hit and injure someone
+  - 他说的话伤了她的心(他說的話傷了她的心)。
+    - tā shuō de huà shāng le tā de xīn
+    - His words hurt her feelings.
+  - 猎人用陷阱伤了一只狼(獵人用陷阱傷了一隻狼)。
+    - liè rén yòng xiàn jǐng shāng le yì zhī láng
+    - The hunter wounded a wolf with a trap.
+  - 他在事故中被撞伤了(他在事故中被撞傷了)。
+    - tā zài shì gù zhōng bèi zhuàng shāng le
+    - He was injured in the accident.
+  - 他开车不小心撞伤了人(他開車不小心撞傷了人)。
+    - tā kāi chē bù xiǎo xīn zhuàng shāng le rén
+    - He carelessly hit and injured someone while driving.
 %%%
