--- a/output/chinese/class/12-22-25/book/output/6.第.md
+++ b/output/chinese/class/12-22-25/book/output/6.第.md
@@ -2,20 +2,21 @@
 ---
 - **pinyin:** dì
 - **definition:** for ordinal numbers
+- **etymology:** Combines the bamboo radical on top—evoking bamboo slips/tags used for recording and ranking—with the phonetic 弟 (“younger brother”), giving the sound dì and hinting at order among siblings, hence the sense of marking sequence/ordinals.
 - **examples:**
-  - 他在比赛得了第三名(他在比賽得了第三名)。
-    - tā zài bǐsài dé le dì sān míng
-    - He took third place in the competition.
-  - 第一(第一)。
-    - dì yī
-    - first
-  - 第十二(第十二)。
-    - dì shí'èr
-    - twelfth
-  - 第二十五课(第二十五課)。
-    - dì èrshíwǔ kè
-    - Lesson 25
-  - 第二医院(第二醫院)。
-    - dì èr yīyuàn
-    - Second Hospital
+  - 这是我第一次来中国(這是我第一次來中國)。
+    - zhè shì wǒ dì yī cì lái zhōngguó
+    - This is my first time coming to China.
+  - 她获得了第一(她獲得了第一)。
+    - tā huòdé le dì yī
+    - She won first place.
+  - 他住在第十二层(他住在第十二層)。
+    - tā zhù zài dì shí'èr céng
+    - He lives on the twelfth floor.
+  - 我们今天上第二十五课(我們今天上第二十五課)。
+    - wǒmen jīntiān shàng dì èr shí wǔ kè
+    - We are having Lesson 25 today.
+  - 我在第二医院工作(我在第二醫院工作)。
+    - wǒ zài dì èr yīyuàn gōngzuò
+    - I work at the Second Hospital.
 %%%
