--- a/output/chinese/class/12-22-25/book/output/7.检查.md
+++ b/output/chinese/class/12-22-25/book/output/7.检查.md
@@ -2,23 +2,31 @@
 ---
 - **pinyin:** jiǎnchá
 - **definition:** to examine
+- **characters:**
+  - 检(檢)
+    - jiǎn
+    - examine, inspect, check; restrain oneself, be proper
+  - 查
+    - chá, zhā
+    - check, examine; look up, consult; investigate; surname Zhā
+- **etymology:** Combines holding things to proper standards (检) with actively looking into and verifying (查) to express systematic checking and investigation. The shared 木 radical hints at measuring/recording tools (e.g., wooden tallies), metaphorically grounding the act of examination.
 - **examples:**
-  - 医生仔细检查病人(醫生仔細檢查病人)。
-    - yīshēng zǐxì jiǎnchá bìngrén
-    - The doctor carefully examined the patient.
-  - 检查身体(檢查身體)。
-    - jiǎnchá shēntǐ
-    - have a check-up
-  - 检查身体(檢查身體)。
-    - jiǎnchá shēntǐ
-    - have a check-up
-  - 检查电脑(檢查電腦)。
-    - jiǎnchá diànnǎo
-    - check the computer
-  - 检查汽车(檢查汽車)。
-    - jiǎnchá qìchē
-    - inspect the car
-  - 检查练习(檢查練習)。
-    - jiǎnchá liànxí
-    - check the exercises
+  - 医生仔细检查了病人的伤口(醫生仔細檢查了病人的傷口)，并记录了情况(並記錄了情況)。
+    - yīshēng zǐxì jiǎnchá le bìngrén de shāngkǒu, bìng jìlù le qíngkuàng
+    - The doctor carefully examined the patient's wound and recorded the situation.
+  - 他去医院检查身体(他去醫院檢查身體)。
+    - tā qù yīyuàn jiǎnchá shēntǐ
+    - He went to the hospital to get a physical exam.
+  - 医生让我明天去检查身体(醫生讓我明天去檢查身體)。
+    - yīshēng ràng wǒ míngtiān qù jiǎnchá shēntǐ
+    - The doctor told me to go for a check-up tomorrow.
+  - 他在检查电脑是否中毒(他在檢查電腦是否中毒)。
+    - tā zài jiǎnchá diànnǎo shìfǒu zhòngdú
+    - He is checking whether the computer is infected with a virus.
+  - 出发前要检查汽车的刹车(出發前要檢查汽車的剎車)。
+    - chūfā qián yào jiǎnchá qìchē de shāchē
+    - You should inspect the car's brakes before setting off.
+  - 老师正在检查练习(老師正在檢查練習)。
+    - lǎoshī zhèngzài jiǎnchá liànxí
+    - The teacher is checking the exercises.
 %%%
