--- a/output/chinese/class/12-22-25/book/output/8.重.md
+++ b/output/chinese/class/12-22-25/book/output/8.重.md
@@ -2,26 +2,27 @@
 ---
 - **pinyin:** zhòng
 - **definition:** serious; heavy
+- **etymology:** Originally a picture of a load—two tiers stacked with a vertical stroke pressing down over an earth/field base—evoking weight. The stacked form semantically extends to gravity and seriousness.
 - **examples:**
-  - 病情很重需要住院(病情很重需要住院)。
-    - bìngqíng hěn zhòng xūyào zhùyuàn
-    - The condition is serious and requires hospitalization.
-  - 这箱子很重小心搬(這箱子很重小心搬)。
-    - zhè xiāngzi hěn zhòng xiǎoxīn bān
-    - This box is heavy; carry carefully.
+  - 他的伤势很重(他的傷勢很重)。
+    - tā de shāngshì hěn zhòng
+    - His injuries are serious.
+  - 这个箱子很重(這個箱子很重)。
+    - zhège xiāngzi hěn zhòng
+    - This box is heavy.
   - 伤重(傷重)。
     - shāng zhòng
-    - seriously injured
+    - Severely injured.
   - 伤不重(傷不重)。
-    - shāng bù zhòng
-    - not seriously injured
+    - shāng bú zhòng
+    - Not seriously injured.
   - 衣服很重(衣服很重)。
     - yīfu hěn zhòng
-    - the clothes are heavy.
+    - The clothes are heavy.
   - 包裹不重(包裹不重)。
-    - bāoguǒ bù zhòng
-    - the package is not heavy.
+    - bāoguǒ bú zhòng
+    - The package isn’t heavy.
   - 工作不重(工作不重)。
-    - gōngzuò bù zhòng
-    - the work isn't heavy.
+    - gōngzuò bú zhòng
+    - The workload isn’t heavy.
 %%%
