--- a/output/chinese/class/12-22-25/book/output/9.完.md
+++ b/output/chinese/class/12-22-25/book/output/9.完.md
@@ -2,23 +2,24 @@
 ---
 - **pinyin:** wán
 - **definition:** to finish; to run out
+- **etymology:** A phonetic-semantic compound: 宀 ‘roof/house’ over 元 ‘origin/primary’ (phonetic), evoking a structure made whole—hence ‘complete/finished.’ By extension, when something is fully completed, nothing remains, giving the sense ‘to run out.’
 - **examples:**
-  - 我已经写完作业了(我已經寫完作業了)。
-    - wǒ yǐjīng xiě wán zuòyè le
-    - I have finished my homework.
-  - 我手机流量用完了(我手機流量用完了)。
-    - wǒ shǒujī liúliàng yòng wán le
-    - My mobile data has run out.
+  - 我已经写完报告了(我已經寫完報告了)。
+    - wǒ yǐjīng xiě wán bàogào le
+    - I’ve finished writing the report.
+  - 电池用完了(電池用完了)。
+    - diànchí yòng wán le
+    - The batteries have run out.
   - 看完电影(看完電影)。
     - kàn wán diànyǐng
-    - finish watching a movie
+    - Finish watching the movie.
   - 做完练习(做完練習)。
     - zuò wán liànxí
-    - finish the exercises
+    - Finish the exercises.
   - 用完钱(用完錢)。
     - yòng wán qián
-    - run out of money
+    - Run out of money.
   - 吃完饭(吃完飯)。
     - chī wán fàn
-    - finish the meal
+    - Finish eating the meal.
 %%%
