--- a/output/chinese/class/12-22-25/class/output/11.把.md
+++ b/output/chinese/class/12-22-25/class/output/11.把.md
@@ -2,6 +2,7 @@
 ---
 - **pinyin:** bǎ
 - **definition:** disposal marker
+- **etymology:** Hand radical 扌 (pictograph of a hand) signals a manual action, combined with 巴 as phonetic (also ‘to cling’) to mean gripping/handle; this notion of taking hold motivates its grammatical use to mark disposal by foregrounding the affected object.
 - **examples:**
   - 请把门关上(請把門關上)。
     - qǐng bǎ mén guān shàng
