--- a/output/chinese/class/12-22-25/class/output/13.我把水喝了.md
+++ b/output/chinese/class/12-22-25/class/output/13.我把水喝了.md
@@ -5,18 +5,20 @@
 - **characters:**
   - 我
     - wǒ
-    - I
+    - I, me; self, ego
   - 把
     - bǎ
-    - take
+    - to hold, grasp; handle; measure word for things with a handle, handfuls; BA construction particle marking disposal
   - 水
     - shuǐ
-    - water
+    - water; liquid, fluid; river, waterway; watery, dilute
   - 喝
-    - hē
-    - drink
+    - hē, hè
+    - to drink; to shout, scold
   - 了
-    - le; particle
+    - le, liǎo
+    - particle indicating completed action or change; to finish, end; to be able to, manage
+- **etymology:** The 把-construction frames the event as the speaker ‘taking hold of’ the water to dispose of it via drinking, with 了 marking completion—thus, the water is handled by being drunk.
 - **examples:**
   - 我把水喝了(我把水喝了)。
     - wǒ bǎ shuǐ hē le
