--- a/output/chinese/class/12-22-25/class/output/14.水被我喝了.md
+++ b/output/chinese/class/12-22-25/class/output/14.水被我喝了.md
@@ -5,18 +5,20 @@
 - **characters:**
   - 水
     - shuǐ
-    - water
+    - water; liquid; river; moisture
   - 被
     - bèi
-    - by
+    - by (passive marker); quilt, blanket; to cover
   - 我
     - wǒ
-    - I
+    - I, me; my
   - 喝
     - hē
-    - drink
+    - to drink
   - 了
-    - le; perfective particle
+    - le
+    - particle indicating completed action; particle indicating change of state
+- **etymology:** Frames a passive event with 水 as the affected patient, 被 marking being acted upon by 我, 喝 supplying the action and 了 completion—metaphorically, 被 extends its 'cover' sense to the water being affected by my drinking.
 - **examples:**
   - 水被我喝了(水被我喝了)。
     - shuǐ bèi wǒ hē le
