--- a/output/chinese/class/12-22-25/class/output/16.受伤了.md
+++ b/output/chinese/class/12-22-25/class/output/16.受伤了.md
@@ -5,14 +5,19 @@
 - **characters:**
   - 受
     - shòu
-    - receive
+    - receive, accept; suffer, undergo; be affected by; endure, bear
   - 伤(傷)
     - shāng
-    - injure
+    - wound, injury; to injure, hurt; to damage, harm; sorrow, grief
   - 了
-    - le; perfective particle
+    - le
+    - perfective aspect particle indicating completed action; sentence-final particle indicating change of state, new situation
+- **etymology:** Combines “to suffer/receive” with “injury” to express undergoing harm, and 了 marks the completed change of state—i.e., has become injured.
 - **examples:**
   - 他在比赛中受伤了(他在比賽中受傷了)。
     - tā zài bǐsài zhōng shòu shāng le
     - He got injured during the match.
+  - 别动(別動)，医生说你受伤了(醫生說你受傷了)，还需要休息(還需要休息)。
+    - bié dòng, yīshēng shuō nǐ shòu shāng le, hái xūyào xiūxi
+    - Don't move; the doctor says you got injured and still need to rest.
 %%%
