--- a/output/chinese/class/12-22-25/class/output/17.重要.md
+++ b/output/chinese/class/12-22-25/class/output/17.重要.md
@@ -4,11 +4,12 @@
 - **definition:** important
 - **characters:**
   - 重
-    - zhòng
-    - heavy
+    - zhòng, chóng
+    - heavy, weighty; important, significant; weight; again, repeatedly
   - 要
-    - yào
-    - want
+    - yào, yāo
+    - to want, desire; to need, require; will, be going to; important, essential
+- **etymology:** Fuses the idea of weight/heaviness with essential necessity, yielding 'weightily essential'—what carries weight and is needed is important.
 - **examples:**
   - 这件事很重要(這件事很重要)。
     - zhè jiàn shì hěn zhòng yào
