--- a/output/chinese/class/12-22-25/class/output/18.病得很重.md
+++ b/output/chinese/class/12-22-25/class/output/18.病得很重.md
@@ -5,21 +5,19 @@
 - **characters:**
   - 病
     - bìng
-    - illness
+    - illness, disease; to be sick, fall ill; fault, defect
   - 得
-    - dé
-    - to get
+    - dé/děi/de
+    - to obtain, get; must, have to; structural particle linking a verb with its complement of degree or result
   - 很
     - hěn
-    - very
+    - very, quite
   - 重
-    - zhòng
-    - heavy
+    - zhòng/chóng
+    - heavy, weighty; important, serious; to value, attach importance to; again, anew
+- **etymology:** Follows the V+得+degree-complement pattern: 病 (to be ill) + 得 links to 很重 (very heavy/serious), literally ‘ill to a very heavy degree,’ using heaviness as a metaphor for severity.
 - **examples:**
-  - 他病得很重(他病得很重)，需要住院(需要住院)。
-    - tā bìng de hěn zhòng, xūyào zhùyuàn
-    - He's seriously ill and needs to be hospitalized.
-  - 医生说她病得很重(醫生說她病得很重)，必须马上治疗(必須馬上治療)。
-    - yīshēng shuō tā bìng de hěn zhòng, bìxū mǎshàng zhìliáo
-    - The doctor said she is seriously ill and must be treated immediately.
+  - 他病得很重(他病得很重)，需要马上住院(需要馬上住院)。
+    - tā bìng de hěn zhòng, xū yào mǎ shàng zhù yuàn
+    - He is seriously ill and needs to be hospitalized immediately.
 %%%
