--- a/output/chinese/class/12-22-25/class/output/19.手臂.md
+++ b/output/chinese/class/12-22-25/class/output/19.手臂.md
@@ -5,12 +5,13 @@
 - **characters:**
   - 手
     - shǒu
-    - hand
+    - hand; expert, adept; practitioner, player, competitor; move, trick
   - 臂
     - bì
-    - arm
+    - arm; upper arm; arm, branch of a machine or structure
+- **etymology:** By pairing “hand” with “upper arm,” it designates the limb that links them—the arm—where 手 highlights the functional end and 臂 the structural segment.
 - **examples:**
   - 她的手臂受伤了(她的手臂受傷了)。
-    - tā de shǒubì shòushāng le
-    - Her arm is injured
+    - tā de shǒu bì shòu shāng le
+    - Her arm is injured.
 %%%
