--- a/output/chinese/class/12-22-25/class/output/20.大腿.md
+++ b/output/chinese/class/12-22-25/class/output/20.大腿.md
@@ -5,15 +5,16 @@
 - **characters:**
   - 大
     - dà
-    - big
+    - big, large; great, major, main; eldest, oldest; adult, grown-up
   - 腿
     - tuǐ
-    - leg
+    - leg, thigh; leg of furniture, support
+- **etymology:** Combines “big” with “leg” to name the larger, upper portion of the leg—the thigh—contrasted with 小腿 (“small leg”) for the calf.
 - **examples:**
   - 他的大腿受伤了(他的大腿受傷了)。
-    - tā de dàtuǐ shòushāng le
-    - His thigh was injured
-  - 做深蹲时(做深蹲時)，我能感觉到大腿在发力(我能感覺到大腿在發力)。
-    - zuò shēndūn shí, wǒ néng gǎnjué dào dàtuǐ zài fālì
-    - When doing squats, I can feel my thigh muscles engaging.
+    - tā de dà tuǐ shòu shāng le
+    - He injured his thigh.
+  - 跑完马拉松后(跑完馬拉松後)，我的大腿很酸痛(我的大腿很酸痛)。
+    - pǎo wán mǎlāsōng hòu wǒ de dà tuǐ hěn suān tòng
+    - After finishing the marathon, my thighs are very sore.
 %%%
