--- a/output/chinese/class/12-22-25/class/output/21.小腿.md
+++ b/output/chinese/class/12-22-25/class/output/21.小腿.md
@@ -5,15 +5,16 @@
 - **characters:**
   - 小
     - xiǎo
-    - small
+    - small, little; young; minor, petty
   - 腿
     - tuǐ
-    - leg
+    - leg; leg of a table, furniture leg; drumstick, leg meat, ham
+- **etymology:** Literally “small leg,” marking the narrower, lower segment of the limb; in contrast to 大腿 (“big leg” = thigh), it specifies the calf/lower leg.
 - **examples:**
-  - 他踢足球时小腿受伤了(他踢足球時小腿受傷了)。
-    - tā tī zúqiú shí xiǎo tuǐ shòu shāng le
-    - He injured his lower leg while playing soccer.
-  - 跑完步我的小腿肌肉很酸(跑完步我的小腿肌肉很酸)。
-    - pǎo wán bù wǒ de xiǎo tuǐ jīròu hěn suān
-    - My calves are really sore after the run.
+  - 他的小腿被划伤了(他的小腿被劃傷了)。
+    - tā de xiǎo tuǐ bèi huá shāng le
+    - His lower leg was cut.
+  - 跑步后(跑步後)，我的小腿很酸(我的小腿很酸)。
+    - pǎo bù hòu, wǒ de xiǎo tuǐ hěn suān
+    - After running, my calves are very sore.
 %%%
