--- a/output/chinese/class/12-22-25/class/output/22.流行.md
+++ b/output/chinese/class/12-22-25/class/output/22.流行.md
@@ -5,12 +5,13 @@
 - **characters:**
   - 流
     - liú
-    - to flow
+    - to flow; to spread, circulate; stream, current; class, type, grade
   - 行
-    - xíng
-    - to go
+    - xíng, háng
+    - to go, to walk; to do, to carry out; OK, all right, permitted; row, line
+- **etymology:** Literally “to flow and be in practice,” it pictures a current moving through society, conveying a trend that circulates and is widely adopted—hence fashionable/popular.
 - **examples:**
-  - 这首歌最近很流行(這首歌最近很流行)。
-    - zhè shǒu gē zuìjìn hěn liúxíng
-    - This song has been very popular lately.
+  - 这首歌很流行(這首歌很流行)。
+    - zhè shǒu gē hěn liú xíng
+    - This song is very popular.
 %%%
