--- a/output/chinese/class/12-22-25/class/output/23.电动车.md
+++ b/output/chinese/class/12-22-25/class/output/23.电动车.md
@@ -5,15 +5,16 @@
 - **characters:**
   - 电(電)
     - diàn
-    - electricity
+    - electricity; electric, electrical; lightning
   - 动(動)
     - dòng
-    - move
+    - to move; to touch, stir (emotionally); to use, employ; to start, set in motion
   - 车(車)
     - chē
-    - vehicle
+    - vehicle, car; Chinese chess rook
+- **etymology:** Electric + motion + vehicle denotes a conveyance whose movement is powered by electricity, with the 'electric' element evoking lightning as the animating force rather than combustion.
 - **examples:**
-  - 我打算换一辆电动车(我打算換一輛電動車)，省钱又环保(省錢又環保)。
-    - wǒ dǎsuàn huàn yī liàng diàn dòng chē, shěng qián yòu huánbǎo
-    - I'm planning to switch to an electric vehicle; it saves money and is eco-friendly.
+  - 我打算买一辆电动车(我打算買一輛電動車)。
+    - wǒ dǎsuàn mǎi yí liàng diàn dòng chē
+    - I plan to buy an electric vehicle.
 %%%
