--- a/output/chinese/class/12-22-25/class/output/24.买不起.md
+++ b/output/chinese/class/12-22-25/class/output/24.买不起.md
@@ -5,15 +5,16 @@
 - **characters:**
   - 买(買)
     - mǎi
-    - buy
+    - to buy, purchase; to bribe, buy off
   - 不
     - bù
-    - not
+    - not, no; negative prefix un-, non-
   - 起
     - qǐ
-    - rise
+    - to rise, get up; to start, begin; to raise, lift; classifier for occurrences, cases
+- **etymology:** In the potential-complement pattern V + 不 + 起, buying is framed as something one can 'rise to' or manage; with 不, it means one cannot rise to the price—unable to manage the purchase, i.e., cannot afford.
 - **examples:**
   - 这辆车太贵了(這輛車太貴了)，我买不起(我買不起)。
     - zhè liàng chē tài guì le, wǒ mǎi bù qǐ
-    - This car is too expensive; I can't afford it.
+    - This car is too expensive; I can’t afford it.
 %%%
