--- a/output/chinese/class/12-22-25/class/output/25.二手车.md
+++ b/output/chinese/class/12-22-25/class/output/25.二手车.md
@@ -5,15 +5,19 @@
 - **characters:**
   - 二
     - èr
-    - two
+    - two; second; double; foolish, silly (slang)
   - 手
     - shǒu
-    - hand
+    - hand; expert, ace; method, technique; move (in games)
   - 车(車)
     - chē
-    - car
+    - vehicle, car; to turn on a lathe, to mill
+- **etymology:** “二手” means “second hand,” implying something passed through another’s hands (not firsthand), and 車 narrows it to a vehicle—together, a car previously owned and used.
 - **examples:**
-  - 我打算买一辆二手车(我打算買一輛二手車)，因为更便宜(因為更便宜)。
-    - wǒ dǎsuàn mǎi yí liàng èrshǒuchē, yīnwèi gèng piányi
-    - I plan to buy a used car because it's cheaper.
+  - 我打算买一辆二手车(我打算買一輛二手車)，因为预算有限(因為預算有限)。
+    - wǒ dǎsuàn mǎi yí liàng èrshǒuchē, yīnwèi yùsuàn yǒuxiàn
+    - I plan to buy a used car because my budget is limited.
+  - 这家店只卖认证过的二手车(這家店只賣認證過的二手車)，车况有保障(車況有保障)。
+    - zhè jiā diàn zhǐ mài rènzhèng guò de èrshǒuchē, chēkuàng yǒu bǎozhàng
+    - This shop only sells certified used cars, and the condition is guaranteed.
 %%%
