--- a/output/chinese/class/12-22-25/class/output/26.等着.md
+++ b/output/chinese/class/12-22-25/class/output/26.等着.md
@@ -5,14 +5,16 @@
 - **characters:**
   - 等
     - děng
-    - wait
+    - to wait for; equal, same; class, rank, grade; and so on, etc.
   - 着(著)
-    - zhe; durative particle
+    - zhe/zháo/zhuó
+    - durative aspect particle indicating ongoing action or state; to touch, make contact; to succeed, manage to (after a verb); to put on, wear, apply, attach
+- **etymology:** Combines 'wait' with the durative 着/著 marking an ongoing state to mean 'be waiting'. The older sense of 著 'to attach' metaphorically suggests being stuck in that state.
 - **examples:**
-  - 我在门口等着你呢(我在門口等著你呢)。
-    - wǒ zài ménkǒu děng zhe nǐ ne
-    - I'm waiting for you at the door.
-  - 大家都等着看他的表现(大家都等著看他的表現)。
-    - dàjiā dōu děng zhe kàn tā de biǎoxiàn
-    - Everyone is waiting to see his performance.
+  - 你先等着(你先等著)，我马上回来(我馬上回來)。
+    - nǐ xiān děng zhe, wǒ mǎshàng huí lái
+    - Just wait for now; I'll be right back.
+  - 我们在门口等着你(我們在門口等著你)。
+    - wǒmen zài ménkǒu děng zhe nǐ
+    - We’re waiting for you at the entrance.
 %%%
