--- a/output/chinese/class/12-22-25/class/output/3.着.md
+++ b/output/chinese/class/12-22-25/class/output/3.着.md
@@ -2,11 +2,12 @@
 ---
 - **pinyin:** zhe
 - **definition:** aspect particle showing ongoing state
+- **etymology:** Traditional form is phono-semantic: the grass radical hints ‘to sprout/appear’ and 者 supplies sound and the sense ‘that which is,’ yielding ‘to be manifest/attached,’ which grammaticalized into marking an ongoing state. The simplified eye-based form (目 with 羊 as phonetic) is a later shape substitution, while the aspect meaning still reflects continued presence.
 - **examples:**
   - 门开着(門開著)。
     - mén kāi zhe
     - The door is open.
   - 墙上挂着一幅画(牆上掛著一幅畫)。
-    - qiáng shàng guà zhe yì fú huà
+    - qiáng shàng guà zhe yī fú huà
     - A painting is hanging on the wall.
 %%%
