--- a/output/chinese/class/12-22-25/class/output/4.了.md
+++ b/output/chinese/class/12-22-25/class/output/4.了.md
@@ -2,11 +2,12 @@
 ---
 - **pinyin:** le
 - **definition:** aspect particle showing completion or change
+- **etymology:** Abstract mark of an ending stroke in early script, with a short cap over a hooked downstroke that looks like a final flourish. This visual sense of “finish” underlies its meanings of completion and change of state.
 - **examples:**
-  - 我们看完了电影(我們看完了電影)。
-    - wǒmen kàn wán le diànyǐng
-    - We finished watching the movie.
-  - 天气冷了(天氣冷了)。
-    - tiānqì lěng le
-    - The weather has turned cold.
+  - 我吃了饭(我吃了飯)。
+    - wǒ chī le fàn
+    - I have eaten.
+  - 天黑了(天黑了)。
+    - tiān hēi le
+    - It has gotten dark.
 %%%
