--- a/output/chinese/class/12-22-25/class/output/5.过.md
+++ b/output/chinese/class/12-22-25/class/output/5.过.md
@@ -2,8 +2,9 @@
 ---
 - **pinyin:** guò
 - **definition:** aspect particle showing past experience
+- **etymology:** Phono-semantic: the walk/road radical (辵/辶) signals motion or passing, while 咼 supplies the sound and contributes the ‘fault’ sense in some usages. The core idea ‘to pass/go by’ extends to the experiential aspect—having ‘passed through’ an event.
 - **examples:**
-  - 我去过中国(我去過中國)。
-    - wǒ qù guo zhōngguó
-    - I have been to China.
+  - 你看过这部电影吗(你看過這部電影嗎)？
+    - nǐ kàn guò zhè bù diànyǐng ma
+    - Have you seen this movie before?
 %%%
