--- a/output/chinese/class/12-22-25/class/output/6.我吃了早饭.md
+++ b/output/chinese/class/12-22-25/class/output/6.我吃了早饭.md
@@ -5,20 +5,22 @@
 - **characters:**
   - 我
     - wǒ
-    - I
+    - I, me; my
   - 吃
     - chī
-    - eat
+    - eat, consume; suffer, receive; take (medicine)
   - 了
-    - le; aspect particle
+    - le
+    - aspect particle indicating completed action; modal particle indicating change of state, now, already
   - 早
     - zǎo
-    - early
+    - early; morning; in advance, beforehand
   - 饭(飯)
     - fàn
-    - meal
+    - cooked rice; meal, food
+- **etymology:** Subject 我 + verb 吃 with perfective 了 marks a completed action, while 早飯—literally “early meal”—specifies the morning meal, together expressing that the speaker has finished eating breakfast.
 - **examples:**
   - 我吃了早饭(我吃了早飯)。
     - wǒ chī le zǎo fàn
-    - I ate breakfast
+    - I ate breakfast.
 %%%
