--- a/output/chinese/class/12-22-25/class/output/8.我们坐着工作.md
+++ b/output/chinese/class/12-22-25/class/output/8.我们坐着工作.md
@@ -5,27 +5,25 @@
 - **characters:**
   - 我
     - wǒ
-    - I
-    - me
+    - I, me; my
   - 们(們)
-    - men; plural marker
+    - men
+    - plural suffix for pronouns and human nouns
   - 坐
     - zuò
-    - sit
+    - sit; take, ride (transport)
   - 着(著)
-    - zhe; durative particle
+    - zhe
+    - aspect particle indicating ongoing action or state
   - 工
     - gōng
-    - work
+    - work, labor; craft, skill
   - 作
     - zuò
-    - do
-    - make
+    - do, make; write, compose; act, behave; be, serve as
+- **etymology:** Subject 我们 combines with 坐着 as a continuous posture to modify 工作, stating that the action of working is performed while in a seated state. 着 marks the ongoing manner of the action.
 - **examples:**
   - 我们坐着工作(我們坐著工作)，效率反而更高(效率反而更高)。
-    - wǒmen zuòzhe gōngzuò, xiàolǜ fǎn'ér gèng gāo
+    - wǒ men zuò zhe gōng zuò, xiào lǜ fǎn ér gèng gāo
     - We work while sitting, and our efficiency is actually higher.
-  - 我们坐着工作一整天(我們坐著工作一整天)，腿都麻了(腿都麻了)。
-    - wǒmen zuòzhe gōngzuò yì zhěng tiān, tuǐ dōu má le
-    - We work while sitting all day, and our legs went numb.
 %%%
