--- a/output/chinese/class/12-22-25/class/output/9.着.md
+++ b/output/chinese/class/12-22-25/class/output/9.着.md
@@ -2,8 +2,9 @@
 ---
 - **pinyin:** V1 zhe V2
 - **definition:** do V2 while doing V1
+- **etymology:** Phono-semantic compound: traditional form uses 艹 ‘grass’ (emerge, be apparent) with 者 as phonetic, meaning ‘to be manifest; to stick/attach,’ while the simplified form swaps in 目 ‘eye’ to stress visibility. From the sense of something remaining attached/visible comes the durative particle meaning maintaining a state (V1) while performing another action (V2).
 - **examples:**
-  - 他躺着看书(他躺著看書)。
-    - tā tǎng zhe kàn shū
-    - He reads while lying down.
+  - 他听着音乐学习(他聽著音樂學習)。
+    - tā tīng zhe yīnyuè xuéxí
+    - He studies while listening to music.
 %%%
