--- a/output/chinese/class/12-22-25/book/output/10.马上.md
+++ b/output/chinese/class/12-22-25/book/output/10.马上.md
@@ -2,20 +2,31 @@
 ---
 - **pinyin:** mǎshàng
 - **definition:** right away; immediately
+- **characters:**
+  - 马(馬)
+    - mǎ
+    - horse; Ma (surname); horse piece in Chinese chess
+  - 上
+    - shàng
+    - above, on, over; to go up, ascend; previous, earlier; to attend, go to
+- **etymology:** Literally “on horseback,” evoking the speed and readiness of a mounted rider, so something done 马上 happens without delay; by extension from acting while still in the saddle to “immediately.”
 - **examples:**
-  - 我马上给你打电话(我馬上給你打電話)。
-    - wǒ mǎshàng gěi nǐ dǎ diànhuà
-    - I'll call you right away
+  - 我马上就给你回电话(我馬上就給你回電話)。
+    - wǒ mǎshàng jiù gěi nǐ huí diànhuà
+    - I'll call you back right away.
+  - 听到警报(聽到警報)，我们马上撤离(我們馬上撤離)。
+    - tīng dào jǐngbào wǒmen mǎshàng chèlí
+    - Upon hearing the alarm, we evacuated immediately.
   - 马上就来(馬上就來)。
     - mǎshàng jiù lái
-    - will come right away.
+    - I'll be right there.
   - 马上去(馬上去)。
     - mǎshàng qù
-    - going right away
+    - I'll go right away.
   - 马上看完(馬上看完)。
     - mǎshàng kàn wán
-    - finish right away
+    - I'll finish it right away.
   - 马上出发(馬上出發)。
     - mǎshàng chūfā
-    - depart right away
+    - We'll set off immediately.
 %%%
