--- a/output/chinese/class/12-22-25/class/output/1.度假.md
+++ b/output/chinese/class/12-22-25/class/output/1.度假.md
@@ -4,13 +4,14 @@
 - **definition:** to go on vacation
 - **characters:**
   - 度
-    - dù
-    - degree
+    - dù; duó
+    - degree; extent, measure; to spend, pass (time); to estimate, gauge
   - 假
-    - jiǎ
-    - fake
+    - jiǎ; jià
+    - fake, false; to pretend, feign; to borrow; vacation, holiday, leave
+- **etymology:** Combines the sense of “to spend/pass (time)” with “leave/holiday,” yielding “to spend one’s leave,” hence going on vacation.
 - **examples:**
-  - 我们计划下个月去日本度假(我們計劃下個月去日本度假)。
-    - wǒmen jìhuà xià gè yuè qù Rìběn dùjià
-    - We're planning to go to Japan for vacation next month.
+  - 我们打算明年夏天去海南度假(我們打算明年夏天去海南度假)。
+    - wǒmen dǎsuàn míngnián xiàtiān qù hǎinán dùjià
+    - We plan to go to Hainan for vacation.
 %%%
