--- a/output/chinese/class/12-22-25/class/output/10.他听着音乐看书.md
+++ b/output/chinese/class/12-22-25/class/output/10.他听着音乐看书.md
@@ -5,26 +5,31 @@
 - **characters:**
   - 他
     - tā
-    - he
+    - he, him; it; other, another
   - 听(聽)
     - tīng
-    - to listen
+    - listen; hear; obey
   - 着(著)
-    - zhe; durative particle
+    - zhe
+    - durative aspect particle; to catch, become affected; to wear, put on; to attach, stick
   - 音
     - yīn
-    - sound
+    - sound; tone; news, information
   - 乐(樂)
     - yuè
-    - music
+    - music; happy, joyful; enjoy, take pleasure in
   - 看
     - kàn
-    - to look
+    - see; look at, watch; read; visit
   - 书(書)
     - shū
-    - book
+    - book; letter, document; writing; calligraphy
+- **etymology:** Subject 他 in a serial-verb construction where 听着音乐 presents an ongoing background action and 看书 gives the main action, with 着 marking simultaneity. Together it conveys reading while (continuously) listening to music.
 - **examples:**
   - 他听着音乐看书(他聽著音樂看書)。
     - tā tīng zhe yīn yuè kàn shū
     - He reads while listening to music.
+  - 他听着音乐看书(他聽著音樂看書)，心情放松(心情放鬆)。
+    - tā tīng zhe yīn yuè kàn shū, xīn qíng fàng sōng
+    - He reads while listening to music, feeling relaxed.
 %%%
