--- a/output/chinese/class/12-22-25/class/output/12.被.md
+++ b/output/chinese/class/12-22-25/class/output/12.被.md
@@ -2,11 +2,9 @@
 ---
 - **pinyin:** bèi
 - **definition:** passive marker
+- **etymology:** Left side is 'clothing' (衣) and right side is 'hide/skin' (皮) as phonetic, together originally meaning a covering or quilt laid over the body. The modern passive sense extends this idea of being 'covered by' into being subjected to an external action.
 - **examples:**
   - 他被老师批评了(他被老師批評了)。
     - tā bèi lǎoshī pīpíng le
     - He was criticized by the teacher.
-  - 我的手机被偷了(我的手機被偷了)。
-    - wǒ de shǒujī bèi tōu le
-    - My phone was stolen
 %%%
