--- a/output/chinese/class/12-22-25/class/output/15.伤心.md
+++ b/output/chinese/class/12-22-25/class/output/15.伤心.md
@@ -5,12 +5,16 @@
 - **characters:**
   - 伤(傷)
     - shāng
-    - injure
+    - to injure, hurt; to damage, impair; wound, injury; to sadden, grieve
   - 心
     - xīn
-    - heart
+    - heart (organ); heart, mind, feelings; intention, thought; core, center
+- **etymology:** Literally “to wound the heart,” it maps physical injury onto the seat of feelings to express emotional pain. Since the heart is the locus of emotion, harming it figuratively conveys deep sorrow.
 - **examples:**
-  - 她听到这个消息后很伤心(她聽到這個消息後很傷心)。
-    - tā tīngdào zhège xiāoxi hòu hěn shāngxīn
-    - She was very sad after hearing this news.
+  - 听到这个消息(聽到這個消息)，我很伤心(我很傷心)。
+    - tīng dào zhège xiāo xī, wǒ hěn shāng xīn
+    - I was very sad to hear the news.
+  - 别伤心(別傷心)，我们会一起想办法(我們會一起想辦法)。
+    - bié shāng xīn, wǒmen huì yìqǐ xiǎng bànfǎ
+    - Don’t be sad; we’ll figure something out together.
 %%%
