--- a/output/chinese/class/12-22-25/class/output/2.对来说.md
+++ b/output/chinese/class/12-22-25/class/output/2.对来说.md
@@ -5,18 +5,19 @@
 - **characters:**
   - 对(對)
     - duì
-    - correct
+    - correct, right; to, toward, regarding; pair, couple; to face, be opposite
   - 来(來)
     - lái
-    - come
+    - come, arrive; next, coming; approximately, about (after numerals)
   - 说(說)
     - shuō
-    - say
+    - to speak, say; to explain, account for; to scold, criticize; theory, doctrine
+- **etymology:** Combines an orientation toward a topic with the light-verb frame ‘come‑say’ (来说), yielding “when it comes to speaking about X,” hence “as for; with regard to,” marking a perspective anchored in the referenced topic.
 - **examples:**
-  - 对我来说(對我來說)，这份工作很有挑战性(這份工作很有挑戰性)。
-    - duì wǒ lái shuō, zhè fèn gōngzuò hěn yǒu tiǎozhànxìng
-    - As for me, this job is very challenging.
-  - 对环境保护来说(對環境保護來說)，这项政策意义重大(這項政策意義重大)。
-    - duì huánjìng bǎohù lái shuō, zhè xiàng zhèngcè yìyì zhòngdà
-    - With regard to environmental protection, this policy is of great significance.
+  - 对我来说(對我來說)，这个问题很重要(這個問題很重要)。
+    - duì wǒ lái shuō, zhège wèntí hěn zhòngyào
+    - As for me, this issue is very important.
+  - 对外国人来说(對外國人來說)，中文发音不太容易(中文發音不太容易)。
+    - duì wàiguórén lái shuō, zhōngwén fāyīn bú tài róngyì
+    - With regard to foreigners, Chinese pronunciation isn’t very easy.
 %%%
