--- a/output/chinese/class/12-22-25/class/output/27.糟糕.md
+++ b/output/chinese/class/12-22-25/class/output/27.糟糕.md
@@ -5,15 +5,13 @@
 - **characters:**
   - 糟
     - zāo
-    - bad
+    - dregs, lees; bad, wretched; marinated in wine lees, pickled; to marinate in wine lees
   - 糕
     - gāo
-    - cake
+    - cake, pastry, rice cake
+- **etymology:** Pairing the notion of dregs/bad with cake (a dense, congealed lump, both in the grain/food domain) conjures spoiled, pasty mash—an image of ruin that intensifies the sense of a situation being in a bad mess, hence “terrible.”
 - **examples:**
-  - 今天的天气真糟糕(今天的天氣真糟糕)。
-    - jīntiān de tiānqì zhēn zāogāo
-    - Today's weather is terrible
-  - 那是一个糟糕的决定(那是一個糟糕的決定)。
-    - nà shì yí gè zāogāo de juédìng
-    - That was a terrible decision.
+  - 情况很糟糕(情況很糟糕)，我们得马上想办法(我們得馬上想辦法)。
+    - qíngkuàng hěn zāo gāo, wǒmen děi mǎshàng xiǎng bànfǎ
+    - The situation is terrible; we must think of a solution immediately.
 %%%
