--- a/output/chinese/class/12-22-25/class/output/7.我去过中国.md
+++ b/output/chinese/class/12-22-25/class/output/7.我去过中国.md
@@ -5,21 +5,25 @@
 - **characters:**
   - 我
     - wǒ
-    - I
+    - I, me; my
   - 去
     - qù
-    - go
+    - go, leave; remove, get rid of
   - 过(過)
     - guò
-    - pass
+    - pass, cross; spend time; exceed, too; experiential aspect particle indicating have done before
   - 中
     - zhōng
-    - middle
+    - middle, center; in, among; China (abbr.)
   - 国(國)
     - guó
-    - country
+    - country, nation; state apparatus, government
+- **etymology:** First-person subject plus the motion verb 'go' marked by experiential 过—originally ‘to pass,’ extended to ‘have done’—takes 中国 (‘central country,’ i.e., China) as the destination, yielding ‘I have been to China.’
 - **examples:**
   - 我去过中国(我去過中國)。
-    - wǒ qù guò Zhōngguó
+    - wǒ qù guò zhōngguó
     - I have been to China.
+  - 我去过中国(我去過中國)，还想再去(還想再去)。
+    - wǒ qù guò zhōngguó, hái xiǎng zài qù
+    - I have been to China, and I want to go again.
 %%%
